i added a fancy title

--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
     <title>OpenLayers map preview</title>
   </head>
   <body>
+  <h1> Fiji Cyclone Track Maps<h1/>
+  <hr/>
+  <p>2019 Fiji met Service</p>
     <div id="toolbar" style="display: none;">
       <ul>
         <li>
